2011-04-12  Pavel Feldman  <pfeldman@google.com>

        Reviewed by Yury Semikhatsky.

        Web Inspector: another pass of protocol renames.
        https://bugs.webkit.org/show_bug.cgi?id=58340

        * inspector/Inspector.json:
        * inspector/InspectorDOMAgent.cpp:
        (WebCore::InspectorDOMAgent::getDocument):
        (WebCore::InspectorDOMAgent::performSearch):
        (WebCore::InspectorDOMAgent::setSearchingForNode):
        * inspector/InspectorDOMAgent.h:
        * inspector/InspectorDebuggerAgent.cpp:
        (WebCore::InspectorDebuggerAgent::evaluateOnCallFrame):
        * inspector/InspectorDebuggerAgent.h:
        * inspector/InspectorRuntimeAgent.cpp:
        (WebCore::InspectorRuntimeAgent::evaluate):
        * inspector/InspectorRuntimeAgent.h:
        * inspector/front-end/ElementsPanel.js:
        (WebInspector.ElementsPanel.prototype._setSearchingForNode):
        (WebInspector.ElementsPanel.prototype.setSearchingForNode):

2011-04-12  Luke Macpherson   <macpherson@chromium.org>

        Reviewed by Dimitri Glazkov.

        Implement remaining Background and Mask css properties in CSSStyleApplyProperty
        https://bugs.webkit.org/show_bug.cgi?id=58390

        No new tests required as no functionality changed.

        * css/CSSStyleApplyProperty.cpp:
        (WebCore::ApplyPropertyExpanding): Class to expand one property to 0-4 properties.
        (WebCore::ApplyPropertyExpandingSuppressValue): Expand properties but suppress applyValue.

        (WebCore::CSSStyleApplyProperty::CSSStyleApplyProperty):
        (WebCore::CSSStyleSelector::applyProperty): Remove implementations that have been moved to CSSStyleApplyProperty.

2011-04-12  Sergey Glazunov  <serg.glazunov@gmail.com>

        Reviewed by Dimitri Glazkov.

        Element::setAttribute should check the namespace of an id attribute
        https://bugs.webkit.org/show_bug.cgi?id=58359

        Test: fast/dom/id-attribute-with-namespace-crash.html
